
1.53  Not Released
    - Removed fix_get_token hack
    - Documented deprecation for get_authorize_url() and get_token()

1.52  2015-04-06 22:45:17
    - Add oauth2->get_token() works in blocking mode (Alexander Karelas)

1.51  2015-03-18 17:38:19
    - Fix get_token() need to return the whole data structure to the callback
      and not just $token.

1.5   2015-03-02 08:31:47
    - Able to mock interface for easy testing

1.4   2015-03-01 21:03:47
    - Fix handling of error in param, #27
    - Add new helper oauth2->auth_url
    - Add new helper oauth2->get_token
    - Add new helper oauth2->providers
    - Add eventbrite and github as providers
    - Deprecate on_xxx handlers
    - Started deprecation process for get_authorize_url() and get_token()

1.3   2014-10-07 08:00:00
    - Fix param injection security issue

1.2   2014-09-06 15:48:00
    - Tidy up the code with .perltidyrc and githook-perltidy
    - Started deprecation process of on_xxx handlers

1.1    2014-03-13 05:55:00
    - Update test suite to latest Mojo (Valcho Nedelchev)
    - Bugfix: When "charset" is included in Content-Type header, 
      token extraction failed.  (Colin Cyr)
    - permit altering the host on a request by request basis  (Colin Cyr)
    - fix typos (David Steinbrunner)

1.0    2013-11-02 16:34:00
    -  Add state parameter
    - Handle user's refusal to auth
    - Doc updates

0.9    2013-05-20 07:51:00
    - Update to use new Mojolicious UA format (jht)
    - Remove deprecated render_text calls

0.8    2012-08-23 22:07:00
    - Add get_authorize_url() helper (Batman)
    - Support sync without callback.
    - Better Mojo::Delay integration (Batman)

0.7    2012-05-30 12:00:00
    - separate ua for oauth (Batman)
    - support extra auth parameters (Judofyr)
    - Fix broken tests (Peder Stray)

0.6    2012-03-09 00:00:00
    - Change to use app_url
   
0.5    2011-10-19 13:54
    - Add SSL dependency

0.4    2011-07-06 18:57 
    - Add support for google oauth2 provider 
