@@ -2,6 +2,7 @@
 1.53  Not Released
     - Removed fix_get_token hack
     - Documented deprecation for get_authorize_url() and get_token()
+    - Fix documentation regarding return value to oauth2->get_token() #45
 
 1.52  2015-04-06 22:45:17
     - Add oauth2->get_token() works in blocking mode (Alexander Karelas)
